[package]
name = "ai-searcher"
version = "0.3.0"

description = "A Tauri App"
authors = ["you"]
edition = "2021"

[lib]
name = "ai_searcher_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] } # 开启托盘功能
tauri-plugin-opener = "2"
tauri-plugin-global-shortcut = "2" # 开启快捷键
serde = { version = "1", features = ["derive"] }
serde_json = "1"
